@@ -1,4 +1,4 @@
-/* $Id: cmd-resize-pane-up.c,v 1.2 2009-01-14 19:29:32 nicm Exp $ */
+/* $Id: cmd-resize-pane-up.c,v 1.3 2009-01-14 21:08:52 nicm Exp $ */
 
 /*
  * Copyright (c) 2009 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -26,13 +26,14 @@
  * Increase pane size.
  */
 
+void	cmd_resize_pane_up_init(struct cmd *, int);
 void	cmd_resize_pane_up_exec(struct cmd *, struct cmd_ctx *);
 
 const struct cmd_entry cmd_resize_pane_up_entry = {
 	"resize-pane-up", "resizep-up",
 	CMD_PANE_WINDOW_USAGE " [adjustment]",
 	CMD_ZEROONEARG,
-	cmd_pane_init,
+	cmd_resize_pane_up_init,
 	cmd_pane_parse,
 	cmd_resize_pane_up_exec,
        	cmd_pane_send,
@@ -40,6 +41,18 @@ const struct cmd_entry cmd_resize_pane_up_entry = {
 	cmd_pane_free,
 	cmd_pane_print
 };
+
+void
+cmd_resize_pane_up_init(struct cmd *self, int key)
+{
+	struct cmd_pane_data	*data;
+
+	cmd_pane_init(self, key);
+	data = self->data;
+
+	if (key == KEYC_ADDESC(KEYC_UP))
+		data->arg = xstrdup("5");
+}
 
 void
 cmd_resize_pane_up_exec(struct cmd *self, struct cmd_ctx *ctx)
