@@ -1,5 +1,6 @@
 14 January 2009
 
+* The alt-up and alt-down keys now resize a pane by five lines at a time.
 * switch-pane is now select-pane and requires -p to select a pane. The
   "o" key binding is changed to down-pane.
 * up-pane and down-pane commands, bound to arrow up and down by default.
@@ -917,7 +918,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.205 2009-01-14 19:56:55 nicm Exp $
+$Id: CHANGES,v 1.206 2009-01-14 21:08:52 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB
